--- a/package.json
+++ b/package.json
@@ -17,8 +17,17 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
     "concurrently": "^7.4.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
     "nodemon": "^2.0.20",
+    "prettier": "2.7.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   },
   "dependencies": {
