--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "database": "npx prisma studio"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,12 @@
     "eslint-plugin-promise": "^6.0.1",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
+    "prisma": "^4.4.0",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1"
   }
