--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "concurrently": "^7.4.0",
     "eslint": "^8.24.0",
@@ -35,6 +37,8 @@
   "dependencies": {
     "@prisma/client": "^4.4.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   }
 }
