--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "database": "npx prisma studio"
+    "database": "npx prisma studio",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.2",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^18.8.3",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -28,9 +32,12 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
+    "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
     "prisma": "^4.4.0",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   },
@@ -38,6 +45,7 @@
     "@prisma/client": "^4.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
     "zod": "^3.19.1"
