--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "author": "Cosma Geroge",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/node": "^18.8.3",
     "@types/supertest": "^2.0.12",
@@ -43,8 +45,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
