--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "npx tsc && npx prisma migrate deploy && npx prisma db seed && node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "database": "npx prisma studio",
     "test": "jest"
@@ -13,6 +13,9 @@
   "repository": {
     "type": "git",
     "url": "https://git.toptal.com/screening/George-Cosma.git"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed/seed.ts"
   },
   "author": "Cosma Geroge",
   "license": "ISC",
@@ -40,6 +43,7 @@
     "prisma": "^4.4.0",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   },
