--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "npx tsc && npx prisma migrate deploy && npx prisma db seed && node dist/index.js",
+    "start": "npm install && npx tsc && npx prisma migrate deploy && npx prisma db seed && node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "database": "npx prisma studio",
     "test": "jest"
